--- a/style.css
+++ b/style.css
@@ -1,20 +1,31 @@
 :root {
   --primaryBackground: white;
-  --primaryBorder: darkgrey;
 }
-
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
 main {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
@@ -40,59 +51,33 @@ header h1 {
   font-size: 46px;
 }
 
-.playlistContainer {
-  background: var(--primaryBackground);
-  width: 90%;
-  max-width: 420px;
+#playlistContainer {
+  display: none;
+  background: linear-gradient(135deg, #edecfd, #b4b2f8);
+  max-width: auto;
   padding: 2rem;
-  border-radius: 28px;
-  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.724);
+  border-radius: 16px;
+  margin-top: 20px;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 0.8rem;
-  margin-bottom: 2rem;
+.songListForm {
+  margin-top: 20px;
+  line-height: 25px;
+  border-radius: 16px;
+  max-width: 500px;
 }
 
-form input {
-  background: #f9f7ff;
-  border-radius: 14px;
-  border: 1px solid var(--primaryBorder);
-  padding: 0.75rem;
-}
-
-form input:focus {
-  outline: none;
-  border: 2px solid var(--primaryBorder);
-}
-
-.playlist {
-  background: var(--primaryBackground);
-  padding: 1.2rem;
-  border-radius: 22px;
-  margin-bottom: 1rem;
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
-}
-
-#playlistBtn {
-  margin-top: 0.5rem;
-  padding: 0.8rem;
+button {
+  margin: 0 5px 0 5px;
+  padding: 1rem;
   border-radius: 16px;
   border: none;
-  background: linear-gradient(135deg, #5e5c94, #b4b2f8);
-  color: var(--primaryBackground);
+  background: linear-gradient(135deg, #edecfd, #b4b2f8);
+  color: rgba(0, 0, 0, 0.814);
   font-weight: bold;
   cursor: pointer;
 }
 
-.playlist h3 {
-  color: black;
-  margin-bottom: 0.3rem;
-  font-size: 1.1rem;
-}
-
-.playlist p {
-  font-size: 0.9rem;
+button:hover {
+  background: var(--primaryBackground);
 }
