added folders for each file

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -34,7 +34,7 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  background-image: url(andrew-solok--9zPjrqCoSE-unsplash.jpg);
+  background-image: url("../assets/background-img.jpg");
   background-size: cover;
   background-position-y: center;
   color: #333;
