--- a/content/css/style.css
+++ b/content/css/style.css
@@ -22,11 +22,12 @@
 
 main {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start; /* start from top instead of centering */
+  padding: 2rem 0;
 }
 
 body {
@@ -58,6 +59,22 @@ header h1 {
   padding: 2rem;
   border-radius: 16px;
   margin-top: 20px;
+}
+
+.genreButtons {
+  margin-bottom: 20px;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.controls button,
+.controls select {
+  margin: 5px;
 }
 
 .songListForm {
