--- a/content/css/style.css
+++ b/content/css/style.css
@@ -26,7 +26,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* start from top instead of centering */
+  justify-content: flex-start;
   padding: 2rem 0;
 }
 
