--- a/content/css/style.css
+++ b/content/css/style.css
@@ -57,7 +57,7 @@ header h1 {
   font-size: 46px;
 }
 
-#playlistContainer {
+#playlist-container {
   display: none;
   background: linear-gradient(135deg, #edecfd, #b4b2f8);
   padding: 2rem;
@@ -65,11 +65,11 @@ header h1 {
   margin-top: 20px;
 }
 
-#playlistContainer.is-open {
+#playlist-container.is-open {
   display: block;
 }
 
-.genreButtons.is-open {
+.genre-buttons.is-open {
   margin-bottom: 20px;
 }
 
@@ -85,7 +85,7 @@ header h1 {
   margin: 5px;
 }
 
-.songListForm {
+.song-listform {
   margin-top: 20px;
   line-height: 25px;
   border-radius: 16px;
